# registration

./: .dockerignore  .env  .flake8  .test.env  Dockerfile  Readme.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  deploy.yml
migration/: env.py
migration/versions/: c5ac5b6e10a5_initial.py
src/: baseclasses.py  config.py  constants.py  database.py  exeptions.py  jwt.py  main.py  rest.py  schemas.py  utils.py
src/auth/: auth.py  controls.py  database.py  manager.py  models.py  schemas.py
src/classes/: __init__.py  authorization_class.py  controls.py  get_user_class.py  jwt_classes.py  mail_ru_class.py  reuse_class.py  vk_class.py  yandex_class.py
src/controllers/: __init__.py  authorization.py  get_user_data.py  vk.py  yandex.py
src/database/: __init__.py  base.py  controls.py  crud.py  data.py  database.py  database_configs.py  models.py  schemas.py  session.py
src/database/models/: __init__.py  mail_ru_model.py  relationship_models.py  user_model.py  vk_model.py  yandex_model.py
src/database/schemas/: __init__.py  auth_schemas.py  mail_ru_schemas.py  vk_schemas.py  yandex_schemas.py
src/errors/: __init__.py  errors.py  func_errors.py
src/interfaces/: __init__.py  authorization_interface.py  basic_authorization_interface.py  crud_interface.py  other_auth_interface.py  other_authorizations_interface.py  reuse_interface.py
src/migration/: env.py
src/migration/versions/: 1b1a1c9bded8_initial_revision.py  2025_01_04_0209-b8dab5f0cf7e_add_tables.py  2025_01_12_0256-881428535e86_new.py  2025_01_12_0351-d5d44c206720_new.py  2025_01_19_1737-392f8b24d68c_add_tables.py  2025_01_21_2230-4cdd553c55f5_add_table_mail_ru.py  2025_01_21_2245-d185a2c52b2d_replace_id_mail_ru.py  2025_01_25_0134-ef1fc64fce36_add_table_yandex.py  2025_02_03_2038-e359e19980e4_add_tables.py  (+25 more)
src/responses/: __init__.py  bad_response.py  good_response.py
src/routers/: __init__.py  authorization.py  authorization_vk.py  get_data.py  mail_ru.py  validate_jwt.py  vk.py  yandex.py
src/services/: db.py  orm.py
tests/: conftest.py  fixtures.py
