[tool.poetry]
name = "auth"
version = "0.1.0"
description = ""
authors = ["DUDKA <andrejmedvedev2713@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.3"}
asyncpg = "^0.30.0"
asyncio = "^3.4.3"
alembic = "^1.13.3"
pydantic-settings = "^2.6.0"
pyvalid = "^1.0.4"
email-validator = "^2.2.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "4.0.1"
python-jose = "^3.3.0"
loguru = "^0.7.2"
slowapi = "^0.1.9"
requests = "^2.32.3"
aiohttp = "^3.11.11"
sqlalchemy = "^2.0.37"
ruff = "^0.9.7"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
pytest-mock = "^3.14.0"
mypy = "^1.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# -- MyPy --
[tool.mypy]
ignore_missing_imports = true
exclude = [
    "__samples__",
    ".venv",
    "src/migration"
]

